resolved all navbar issues, alignment logos from mobile to desktop

--- a/api/search/search/static/css/styles.css
+++ b/api/search/search/static/css/styles.css
@@ -104,18 +104,19 @@ h1.hero-head{font-family:'Source Code Pro',monospace;margin-bottom:1.5rem;font-s
 .hero-lead{font-family:'Source Code Pro',monospace;font-size:0.8125rem;text-align:center;margin-bottom:2rem;}
 
 /* Navbar */
+.navbar-fixed-top.bg-primary{height:60px;}
 .nav-header{width:100%;}
-.navbar{font-family:'Source Code Pro',monospace;padding-top:0.4375rem;padding-bottom:0.5625rem;padding-right:0;padding-left:0;}
+.navbar{font-family:'Source Code Pro',monospace;padding-top:0.4375rem;padding-bottom:0.5625rem;padding-right:0;padding-left:0;line-height:26px;}
 .navbar-brand{margin-right:0px;}
 .navbar-brand img{width:164px;position:fixed;bottom:13%;z-index:2000;margin:0 auto;left:0;right:0;}
 .brand-bug{margin-right:1rem;}
-.brand-bug img{width:30px;position:relative;}
-div.app-common > div > div.navbar-fixed-top.bg-primary > header.container.nav-header > nav.navbar > a.navbar-brand{display:none;}
-div.app-common > div > div.navbar-fixed-top.bg-primary > header.container.nav-header > nav.navbar > a.navbar-brand.brand-bug{display:block;}
+.brand-bug img{width:33px;position:relative;top:2px;}
+div.navbar-fixed-top.bg-primary > header.container.nav-header > nav.navbar.navbar-toggleable-md > a.navbar-brand{display:none;}
+div.navbar-fixed-top.bg-primary > header.container.nav-header > nav.navbar.navbar-toggleable-md > a.navbar-brand.brand-bug{display:block;}
 a.nav-link{color:#fff;font-size:0.8125rem;font-weight:300;margin-top:0.0625rem;}
 a.nav-link:hover,a.nav-link:focus{color:#fff;}
 .nav-item:first-child{margin-left:.625rem;}
-.navbar-nav{display: none;}
+.navbar-nav{display:none;}
 
 /* Other */
 body,html,#app,.app-landing{height:100%;}
@@ -147,12 +148,11 @@ h2.action-title{margin-bottom:35px;font-size:30px;line-height:42px;font-weight:3
   /* Navbar */
   .nav-header{width:unset;}
   .navbar,.navbar-nav{display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;flex-direction:row;}
-  .navbar{line-height:26px;}
   .brand-bug{display:none;}
   .navbar-brand{margin-right:2.5rem;margin-top:0.25rem;}
-  .navbar-brand img{position:relative;display:block;}
-  a.navbar-brand{display:block;}
-  a.navbar-brand.brand-bug{display:none;}
+  .navbar-brand img{position:relative;display:inline-block;top:0px;margin-left:3px;}
+  div.navbar-fixed-top.bg-primary > header.container.nav-header > nav.navbar.navbar-toggleable-md > a.navbar-brand{display:inline-block;}
+  div.navbar-fixed-top.bg-primary > header.container.nav-header > nav.navbar.navbar-toggleable-md > a.navbar-brand.brand-bug{display:none;}
   .nav-item:first-child{margin-left:.875rem;}
   .navbar-nav .nav-item+.nav-item{margin-left:1.375rem;}
   a.nav-link{padding-right:5px;padding-left:5px;}
@@ -162,8 +162,6 @@ h2.action-title{margin-bottom:35px;font-size:30px;line-height:42px;font-weight:3
   .dropdown-menu{margin-top:0;padding-top:1rem;padding-bottom:1rem;background-color:#270F34;border-radius:0;border:1px solid rgba(255,255,255,0.1);box-shadow:0 0 1.875rem rgba(0,0,0,0);}
   a.dropdown-item{font-size:0.8125rem;color:#95889C;font-weight:300;padding:0.375rem 3.4375rem 0.375rem 1.875rem;}
   .dropdown-item:focus,.dropdown-item:hover{color:#95889C;background-color:rgba(0,0,0,0.15);font-weight:300;}
-  .navbar-brand img{position:relative;display:block;}
-
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -176,6 +174,8 @@ h2.action-title{margin-bottom:35px;font-size:30px;line-height:42px;font-weight:3
   h1.hero-head{font-size:2.25rem;}
   h3{margin-top:45px;margin-bottom:15px;margin-bottom:20px;}
   h4{margin:20px 0;}
+
+  .navbar-brand img{position:relative;display:block;top:0px;}
 
   /* Hero */
   .hero-head.summ-head{font-size:54px;}
